Select: * make select entries Buttons * fix select list width (no margin necessary) * fix auto_size (wrapping labels) * add hover color to select entries * add icons to examples * add auto_size example * fix docs * border radius for select list

--- a/styles/basic_definitions.css
+++ b/styles/basic_definitions.css
@@ -984,14 +984,12 @@
 .aux-selectlist {
   padding: 0;
   text-align: left;
+  border-radius: var(--aux-border-radius);
 }
 
 .aux-selectlist > .aux-selectentry {
   margin: 0;
-  padding: var(--aux-button-paddingvertical) var(--aux-button-paddinghorizontal);
-  line-height: var(--aux-selectentry-lineheight);
-  cursor: pointer;
-  display: block;
+  display: flex;
 }
 
 /* SPREAD */
